--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<title>Calendario A-B-C-D</title>
 </head>
-<body class="bodyy" onload="enero(), nuevo_an(), dia_actual(), alerta()">
+<body class="bodyy" onload="enero(), nuevo_an(), dia_actual()">
 	<br>
 	<br>
 
