--- a/index.html
+++ b/index.html
@@ -1666,7 +1666,7 @@
 														</center>
 									<br>
 
-									<div class="ingresos">
+									<div class="ingresos pruebita">
 									<center><p class="fondo">(Ingresos)</p></center>
 									<p id="p1" class="parr">Horas normales:........................</p>
 									<p id="p2" class="parr">Horas +50%:...................................</p>
@@ -1676,7 +1676,7 @@
 									<p id="p6" class="parr">Presentismo:.................................</p>
 									</div>
 									<br>
-									<div class="descuentos">
+									<div class="descuentos pruebita">
 									<center><p class="fondo">(Descuentos)</p></center>
 									<p id="p7" class="parr">Jubilacion SIPA:.....................</p>
 									<p id="p8" class="parr">INSSJP:...................................</p>
