--- a/index.html
+++ b/index.html
@@ -1727,7 +1727,9 @@
 									<input type="button" value="Validar" name="">
 									<br>
 									<br>
-									<center><input class="bo" type="button" value="Calcular" name=""></center>
+									<center><input class="bo" type="button" value="Calcular" name="">
+									<a href="https://matibza.github.io/">VOLVER</a>
+									</center>
 						</div>
 </body>
 </html>
