--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<a class="anclas" href="#a338" id="ancla_octubre">octubre</a>
 	<a class="anclas" href="#a380" id="ancla_noviembre">noviembre</a>
 	<a class="anclas" href="#a422" id="ancla_diciembre">diciembre</a>
+		<a class="anclas" href="#ancla_enero" id="recibos">enero</a>
 	<br>
 	<br>
 
